--- a/src/components/Offers/offer.css
+++ b/src/components/Offers/offer.css
@@ -5,11 +5,11 @@
 .header-offer> h1{
     font-size: 4rem;
     color: #0C0B4B;
-    text-decoration: underline #0C0B4B;
+    /* text-decoration: underline #0C0B4B; */
 }
 .header-offer>h1> span{
     color: #31A049;
-    text-decoration: underline #31A049;
+    /* text-decoration: underline #31A049; */
 }
 .offer-cards{
     display: flex;
