--- a/src/pages/Contact/contact.css
+++ b/src/pages/Contact/contact.css
@@ -92,3 +92,20 @@
     height: 10vh;
   }
 }
+.form-state{
+  padding: 5px;
+  font-size: 1.3rem;
+  font-weight: 600;
+  
+   label{
+    margin-right: 10px;
+   }
+}
+#state{
+  width: 75%;
+  height: 25px;
+  border-radius: 5px;
+  font-size: 1rem;
+  border: 2px solid#0C0B4B;
+  
+}
