--- a/src/pages/Complaint Portal/complaintportal.css
+++ b/src/pages/Complaint Portal/complaintportal.css
@@ -25,3 +25,20 @@ margin-bottom: 50px;
         
     }
 }
+.form-state{
+    padding: 5px;
+    font-size: 1.3rem;
+    font-weight: 600;
+    
+     label{
+      margin-right: 10px;
+     }
+  }
+  #stat{
+    width: 77%;
+    height: 32px;
+    border-radius: 5px;
+    font-size: 1rem;
+    border: 2px solid#0C0B4B;
+    
+  }
