--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -1,76 +1,73 @@
-.Home{
+.Home {
+}
+.Home-main {
+  height: 85vh;
+  /* width: 100; */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0px 5vw;
+  margin-bottom: 50px;
+  /* border-bottom: 3px solid #2f2f48; */
+}
+.Home-main p {
+  font-size: 4rem;
+  font-weight: 700;
+  line-height: 70px;
+  color: #0c0b4b;
+}
+.Home-main span {
+  color: #31a049;
+}
 
-}
-.Home-main{
-height: 85vh;
-/* width: 100; */
-display: flex;
-justify-content: space-between;
-align-items: center;
-padding: 0px 5vw;
-margin-bottom: 50px;
-/* border-bottom: 3px solid #2f2f48; */
-}
-.Home-main p{
-font-size: 4rem;
-font-weight: 700;
-line-height: 70px;
-color: #0C0B4B;
-}
-.Home-main span{
-    color: #31A049;
-}
-
-.Home-main-img{
-    /* height: 500px;
+.Home-main-img {
+  /* height: 500px;
     width: 500px; */
-    width: 58%;
-    margin-bottom: 5vh;
+  width: 58%;
+  margin-bottom: 5vh;
 }
-.About-home{
-    /* text-align: center; */
-    /* margin-bottom: 100vh; */
-    padding: 100px;
-    
+.About-home {
+  /* text-align: center; */
+  /* margin-bottom: 100vh; */
+  padding: 0px 10vw;
+  padding-bottom: 80px;
 }
-.About-home> h1{
-    font-size: 4rem;
-    text-align: center;
-    font-weight: 600;
-    
-    margin-bottom: 50px;
-    color: #0C0B4B;
-}
-.About-home>h1> span{
-    color: #31A049;
-    
-}
-.About-home> p{
-    font-size: 1.7rem;
-    line-break: auto;
-    text-align: justify;
+.About-home > h1 {
+  font-size: 4rem;
+  text-align: center;
+  font-weight: 600;
 
+  margin-bottom: 50px;
+  color: #0c0b4b;
+}
+.About-home > h1 > span {
+  color: #31a049;
+}
+.About-home > p {
+  font-size: 1.7rem;
+  line-break: auto;
+  text-align: justify;
 }
 @media (max-width: 768px) {
-    .Home-main{
-        text-align: center;
-        height: 50vh;
-    }
-    .Home-main-img{
-      display: none;
-    }
-    .Home-main p{
-      font-size: 3rem;
-    }
-    .About-home{
-        /* margin-bottom: 50vh; */
-        padding: 20px;
-    }
-    .About-home h1{
-        font-size: 3rem;
-    }
-    .About-home> p{
-        text-align: center;
-        font-size: 1rem;
-    }
+  .Home-main {
+    text-align: center;
+    height: 50vh;
+  }
+  .Home-main-img {
+    display: none;
+  }
+  .Home-main p {
+    font-size: 3rem;
+  }
+  .About-home {
+    /* margin-bottom: 50vh; */
+    padding: 20px;
+  }
+  .About-home h1 {
+    font-size: 3rem;
+  }
+  .About-home > p {
+    text-align: center;
+    font-size: 1rem;
+  }
 }
