--- a/src/Admin/Upload Portal/upload.css
+++ b/src/Admin/Upload Portal/upload.css
@@ -10,6 +10,8 @@
 }
 .form-title{
     text-align: center;
+    color: #0C0B4B;
+    font-size: 44px;
     
     
     letter-spacing: 0.5px;
@@ -21,6 +23,7 @@
     border-bottom: none;
     padding: 30px 0;
     padding-bottom: 0;
+    border-bottom-left-radius: 40px;
 
 /* .form-field::before{
     bottom: 100%;
@@ -66,7 +69,7 @@
     padding-bottom: 20px;
     /* border-bottom: 2px solid #e5e5e5; */
 }
-p{
+.form-group p{
     width: 90px;
     color: green;
     font-size: 20px;
@@ -189,6 +192,8 @@ p{
 form{
     width: 70%;
     box-shadow: 0px 0px 10px 0px;
+    border-top-right-radius: 40px;
+    border-bottom-left-radius: 40px;
     
 }
 
@@ -207,10 +212,7 @@ form{
 .portal{
     color: #31A049;
 }
-h2{
-    color: #0C0B4B;
-    font-size: 44px;
-}
+
 .but{
     width: 51.2vw;
     height: 8vh;
@@ -222,4 +224,5 @@ h2{
    font-size: 20px;
    font-weight: 600;
    /* border-radius: 10px; */
+   border-bottom-left-radius: 40px;
 }
